# test-exclude-paths-python-3

./: pyproject.toml
.github/: dependabot.yml
docs/: requirements.txt
tests/: requirements.txt
